tests/fmt_missing_arg.stderr
error: 1 positional argument in format string, but no arguments were given
 --> $DIR/fmt_missing_arg.rs:3:18
  |
3 | #[error_context("{}")]
  |                  ^^
